--- a/test/BrickPiNet/BrickPiNet.csproj
+++ b/test/BrickPiNet/BrickPiNet.csproj
@@ -39,9 +39,13 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="..\..\src\BPi.cs">
+      <Link>BPi.cs</Link>
+    </Compile>
     <Compile Include="..\..\src\BrickPi.cs">
       <Link>BrickPi.cs</Link>
     </Compile>
+    <Compile Include="..\..\src\BindableBase.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
