--- a/test/Sample/Sample.csproj
+++ b/test/Sample/Sample.csproj
@@ -45,7 +45,9 @@
       <Link>sample.cs</Link>
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="..\..\src\sampleCs.cs" />
+    <Compile Include="simplebot_psp.cs" />
+    <Compile Include="simplebot_simple.cs" />
+    <Compile Include="simplebot_speed.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
