--- a/example/WebBrick/WebBrick.csproj
+++ b/example/WebBrick/WebBrick.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{37860F6A-5465-4356-8BA0-7CFBF2E731A2}</ProjectGuid>
+    <ProjectGuid>{F36FF092-DF44-414C-91E7-D66ACDA8D2E1}</ProjectGuid>
     <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Sample</RootNamespace>
-    <AssemblyName>Sample</AssemblyName>
+    <RootNamespace>WebBrick</RootNamespace>
+    <AssemblyName>WebBrick</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -41,23 +41,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="bot\simplebot_raw.cs" />
-    <Compile Include="ev3\ev3_colorsensor.cs" />
-    <Compile Include="ev3\ev3_gyrosensor.cs" />
-    <Compile Include="ev3\ev3_touchsensor.cs" />
-    <Compile Include="Menu.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="bot\simplebot_psp.cs" />
-    <Compile Include="bot\simplebot_simple.cs" />
-    <Compile Include="bot\simplebot_speed.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\src\BrickPiNet\BrickPiNet.csproj">
-      <Project>{07EC6440-C21C-4410-BBAF-F144B6763170}</Project>
-      <Name>BrickPiNet</Name>
+    <ProjectReference Include="..\Sample\Sample.csproj">
+      <Project>{37860f6a-5465-4356-8ba0-7cfbf2e731a2}</Project>
+      <Name>Sample</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
