--- a/src/Makefile
+++ b/src/Makefile
@@ -8,7 +8,9 @@ all: ../lib/libbrickpinet.so ../lib/BrickPiNet.dll
 	-sdk:4.5 \
 	BrickPiNet/BindableBase.cs  \
 	BrickPiNet/BrickPi.cs \
-	BrickPiNet/BPi.cs
+	BrickPiNet/BrickPi.cs \
+	BrickPiNet/BPi.cs \
+	BrickPiNet/BotPiJoystick.cs 
 
 clean:
 	rm *.o *.dll *.so *.exe
