ライセンスを追加、Readme を修正

--- a/example/WebBrickFSharp/WebBrickFSharp.fsproj
+++ b/example/WebBrickFSharp/WebBrickFSharp.fsproj
@@ -48,6 +48,14 @@
   <ItemGroup>
     <Compile Include="Program.fs" />
     <None Include="App.config" />
+    <None Include="Program.fsx" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Sample\Sample.csproj">
+      <Name>Sample</Name>
+      <Project>{37860f6a-5465-4356-8ba0-7cfbf2e731a2}</Project>
+      <Private>True</Private>
+    </ProjectReference>
   </ItemGroup>
   <PropertyGroup>
     <MinimumVisualStudioVersion Condition="'$(MinimumVisualStudioVersion)' == ''">11</MinimumVisualStudioVersion>
